welcome.lessons.welcome.methods.returning.MethodsReturning.scala.error
Program:3: error: '(' expected but identifier found.
    def vuBiscuit():Boolean = {( if x=1) {return true} else {return true}
                                    ^Program:5: error: illegal start of simple expression
    if (vuBiscuit() == true) {return false;} else {return true;}}
                                                                ^